tests/parsing/fail/invalid_sig_type.circom
pragma circom 2.0.6;

template T() {
    // too hard to detect with a LALR parser
    signal iput s;
}

component main = T();
